--- a/gallery.html
+++ b/gallery.html
@@ -2,24 +2,24 @@
 <html>
 <head>
 <title>Image Gallery</title>
-<link rel="stylesheet" href="styles/layout.css" media="screen"/>
+<link rel="stylesheet" href="layout.css" media="screen"/>
 </head>
 <body>
 <h1>Snapshouts</h1>
 <ul>
 <li>
- <a href="images/1.jpg" title="A fireworks display">Fireworks</a>
+ <a href="1.jpg" title="A fireworks display">Fireworks</a>
 </li>
 <li>
- <a href="images/2.jpg" title="A cup">Cup</a>
+ <a href="2.jpg" title="A cup">Cup</a>
 </li><li>
- <a href="images/3.jpg" title="A red">Red</a>
+ <a href="3.jpg" title="A red">Red</a>
 </li><li>
- <a href="images/4.jpg" title="The famous clock">Big</a>
+ <a href="4.jpg" title="The famous clock">Big</a>
 </li>
 </ul>
-<img id="placeholder" src="images/5.jpg" alt="my image gallery"/>
-<script src="scripts/showPic.js"></script>
+<img id="placeholder" src="5.jpg" alt="my image gallery"/>
+<script src="showPic.js"></script>
 <p id="description">Choose an image.</p>
 </body>
 </html>
